# kibble

./: Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  meta.rs  run.rs  thread.rs  window.rs
src/audio/: audio.rs  device.rs  format.rs  mod.rs  pipe.rs  player.rs  source.rs  stream.rs
src/event/: event.rs  mod.rs  queue.rs
src/input/: mod.rs
src/input/keyboard/: code.rs  mod.rs  modifiers.rs  state.rs
src/input/mouse/: button.rs  mod.rs  state.rs
src/keyboard/: code.rs  label.rs  mod.rs  state.rs
src/math/: color.rs  mod.rs  rect.rs  transform.rs  vector.rs
src/mouse/: button.rs  mod.rs  state.rs
src/render/: frame.rs  mod.rs  renderer.rs  texture.rs
src/sdl_util/: as_sdl.rs  err.rs  io.rs  mod.rs  panic.rs  quit.rs
src/window/: mod.rs  render.rs
