[package]
name = "kibble"
version = "0.1.0"
edition = "2024"
description = "a little game toolkit"
license = "MIT"

[dependencies]
derive_more = { version = "2.1.1", features = ["add", "add_assign"] }
futures = { version = "0.3.32", optional = true }
num-traits = "0.2.19"
sdl3-image-sys = "0.6.2"
sdl3-sys = "0.6.3"

[features]
default = ["audio", "event", "keyboard", "meta", "mouse", "render", "window"]
app = []
audio = []
event = []
keyboard = []
meta = []
mouse = []
render = ["window"]
sdl_util = []
window = []